MDEV-5047 virtual THD::~THD(): Assertion `status_var.memory_used == 0' fails - Don't forget to delete the query plan footprint when   the query wasn't printed into slow query log for some reason - ALso removed some garbage code.